--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,15 @@ body {
     text-align: center;
 }
 
+/* First panel (header) */
+
 body > header {
     background-image:
+        radial-gradient(
+            ellipse farthest-corner at 50% 50%,
+            rgba(0, 0, 0, 0) 0,
+            rgba(0, 0, 0, 1) 100%
+        ),
         repeating-linear-gradient(
             -30deg,
             transparent,
@@ -48,5 +55,27 @@ body > header {
             rgba(255,205,205,0.05) 180px,
             transparent 180px
         );
-    height:700px;
+    height: 700px;
+    
+}
+
+body > header section {
+    padding-top: 250px;
+}
+
+h1 {
+    font-size: 200px;
+    text-shadow:
+        0 1px 0 #999,
+        0 2px 0 #888,
+        0 3px 0 #777,
+        0 4px 0 #666,
+        0 5px 0 #555,
+        0 6px 0 #444,
+        0 7px 0 #333,
+        0 8px 7px #221125;
+}
+
+body > header p {
+    font-size: 40px;
 }
