--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,113 @@ body > header {
             transparent 180px
         );
     height: 700px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+@-webkit-keyframes drop-in {
+    from {
+        margin-top: -350px;
+    }
     
+    20% {
+        margin-top: -350px;
+        -webkit-filter: blur(10px);
+        filter: blur(10px);
+    }
+    
+    70% {
+        margin-top: 238px;
+        -webkit-filter: blur(2);
+        filter: blur(2);
+    }
+    
+    to {
+        margin-top: 218px;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+    }
+}
+
+@-moz-keyframes drop-in {
+    from {
+        margin-top: -350px;
+    }
+    
+    20% {
+        margin-top: -350px;
+        -webkit-filter: blur(10px);
+        filter: blur(10px);
+    }
+    
+    70% {
+        margin-top: 238px;
+        -webkit-filter: blur(2);
+        filter: blur(2);
+    }
+    
+    to {
+        margin-top: 218px;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+    }
+}
+
+@-o-keyframes drop-in {
+    from {
+        margin-top: -350px;
+    }
+    
+    20% {
+        margin-top: -350px;
+        -webkit-filter: blur(10px);
+        filter: blur(10px);
+    }
+    
+    70% {
+        margin-top: 238px;
+        -webkit-filter: blur(2);
+        filter: blur(2);
+    }
+    
+    to {
+        margin-top: 218px;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+    }
+}
+
+@keyframes drop-in {
+    from {
+        margin-top: -350px;
+    }
+    
+    20% {
+        margin-top: -350px;
+        -webkit-filter: blur(10px);
+        filter: blur(10px);
+    }
+    
+    70% {
+        margin-top: 238px;
+        -webkit-filter: blur(2);
+        filter: blur(2);
+    }
+    
+    to {
+        margin-top: 218px;
+        -webkit-filter: blur(0);
+        filter: blur(0);
+    }
 }
 
 body > header section {
-    padding-top: 218px;
+    -webkit-animation: drop-in 1.2s;
+    -moz-animation: drop-in 1.2s;
+    -o-animation: drop-in 1.2s;
+    animation: drop-in 1.2s;
+    margin-top: 218px;
 }
 
 h1 {
@@ -112,6 +214,7 @@ body > header p {
 /* Nav panel */
 
 nav {
+    background-color: #5b66a2; /* because the gradient isn't working in FF */
     background-image:
         linear-gradient(
             0,
@@ -129,7 +232,7 @@ nav {
         0 7px 0 #191927,
         0 8px 7px #07071b;
     height: 100px;
-    z-index: 1;
+    margin-top: 700px;
 }
 
 nav li {
