--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,7 @@
+---
+# Primary sass styling for bdero.me
+---
+
 body {
     background-color: rgb(67,67,67);
     background-image: url(../images/static.png);
